<resources>
    <string name="app_name">MedAssist</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Home</string>
    <string name="menu_medication">Meds</string>
    <string name="menu_exercise">Exercise</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_appointment">Appointments</string>


    <string name="image_view_item_transform_content_description">Item image</string>
    <string name="fab_content_description">Action button</string>

    <string name="menu_profile">Profile</string>

    <!-- Medication Card -->
    <string name="today_medications">Today\'s Medications</string>
    <string name="medicine_1">Medicine #1</string>
    <string name="medicine1_time">Take 2 after lunch</string>
    <string name="medicine1_warning">Might cause drowsiness</string>
    <string name="medicine_2">Medicine #2</string>
    <string name="medicine2_time">Take once before going to bed</string>
    <string name="add_medication">+ Add Medication</string>
    <string name="no_medications">"No medications today"</string>

    <!-- Appointment Card -->
    <string name="upcoming">Upcoming</string>
    <string name="tuesday">TUESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="date_18">18</string>
    <string name="date_20">20</string>
    <string name="appointment_1">Appointment #1</string>
    <string name="location_1">Location #1</string>
    <string name="appointment1_time">09:00 - 10:20 AM</string>
    <string name="appointment_2">Appointment #2</string>
    <string name="location_2">Location #2</string>
    <string name="appointment2_time">02:30 - 04:20 PM</string>
    <string name="no_appointment">"No appointments this week"</string>

    <!-- Content Descriptions -->
    <string name="profile_icon_desc">Profile</string>
    <string name="logo_desc">MedAssist Logo</string>
    <string name="add_button_desc">Add Medication</string>

    <!-- Exercise Card -->
    <string name="ex_progress">Exercises</string>
    <string name="progress_number">60%</string>
    <string name="brisk_walking">Brisk Walking 3km</string>
    <string name="swimming">Swimming</string>
    <string name="description_add_exercise">add exercise here ****</string>
    <string name="all_medications">All Medications</string>
    <string name="all_appointments">All Appointments</string>
    <string-array name="duration_units">
        <item>days</item>
        <item>weeks</item>
        <item>months</item>
    </string-array>

    <string-array name="dose_units">
        <item>pill(s)</item>
        <item>mg</item>
        <item>ml</item>
        <item>tbsp</item>
        <item>tsp</item>
    </string-array>


    <!-- spinner card -->
    <string-array name="frequency_options">
        <item>Once daily</item>
        <item>Twice daily</item>
        <item>Three times daily</item>
        <item>Four times daily</item>
        <item>Every morning</item>
        <item>Every night</item>
        <item>Every other day</item>
        <item>Weekly</item>
    </string-array>

    <string-array name="appointment_frequency_options">
        <item>N.A</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Biweekly</item>
        <item>Monthly</item>
        <item>Bimonthly</item>
        <item>Every 4 Months</item>
        <item>Every 6 Months</item>
        <item>Annually</item>
    </string-array>



</resources>