<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_transform"
            android:icon="@drawable/homeicon"
            android:title="@string/menu_transform" />
        <item
            android:id="@+id/nav_medication"
            android:icon="@drawable/pillsicon"
            android:title="@string/menu_medication" />
        <item
            android:id="@+id/nav_exercise"
            android:icon="@drawable/exercise"
            android:title="@string/menu_exercise" />
        <item
            android:id="@+id/nav_appointment"
            android:icon="@drawable/doctoricon"
            android:title="@string/menu_appointment" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_all_medications"
            android:icon="@drawable/pillsicon"
            android:title="@string/all_medications" />

    </group>
</menu>