<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/appointmentViewCard"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    android:layout_marginStart="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/sf_pro_text_heavy"
            android:textSize="23sp"
            android:textColor="@color/black"
            android:text="@string/upcoming" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Appointment 1 details -->
                <TextView
                    android:id="@+id/appointmentDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday"
                    android:textColor="@color/red" />

                <TextView
                    android:id="@+id/appointmentDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_18"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:cardBackgroundColor="@color/lightblue"
                    app:cardCornerRadius="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="6dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginVertical="7dp"
                            android:layout_marginStart="8dp"
                            android:background="@drawable/rounded_vertical_line" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="6dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/appointmentTitle1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/sf_pro_text_medium"
                                android:text="@string/appointment_1"
                                android:textColor="@color/black"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/appointmentLocation1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/sf_pro_text_regular"
                                android:text="@string/location_1"
                                android:textColor="@color/darkgrey"
                                android:textSize="11sp" />

                            <TextView
                                android:id="@+id/appointmentTime1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/sf_pro_text_regular"
                                android:text="@string/appointment1_time"
                                android:textColor="@color/darkgrey"
                                android:textSize="11sp" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.cardview.widget.CardView>